# mTUO

./: .gitignore  .gitmodules  PRIVACY_POLICY.md  README.md  build.gradle  doIt.sh  doIt_crystax.sh  tgit status
.bundle/: config
app/: CMakeLists.txt  CMakeLists167.txt  build.gradle
app/prebuilt/1.67.0/include/boost/thread/pthread/: pthread_helpers.hpp
app/prebuilt/1.68.0/arm64-v8a/: rename.sh
app/prebuilt/ndk_25_boost_1.79.0/include/boost/: version_ndk.hpp
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_atomic-1.79.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_chrono-1.79.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_container-1.79.0/: boost_container-config.cmake  libboost_container-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_context-1.79.0/: boost_context-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_contract-1.79.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_coroutine-1.79.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_date_time-1.79.0/: boost_date_time-config.cmake  libboost_date_time-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_exception-1.79.0/: boost_exception-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_fiber-1.79.0/: boost_fiber-config.cmake  libboost_fiber-variant-shared.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_filesystem-1.79.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_graph-1.79.0/: boost_graph-config.cmake  libboost_graph-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_graph_parallel-1.79.0/: boost_graph_parallel-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_headers-1.79.0/: boost_headers-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_iostreams-1.79.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_json-1.79.0/: boost_json-config.cmake  libboost_json-variant-shared.cmake  libboost_json-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_log-1.79.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_log_setup-1.79.0/: boost_log_setup-config.cmake  libboost_log_setup-variant-shared.cmake  libboost_log_setup-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_math_c99-1.79.0/: boost_math_c99-config.cmake  libboost_math_c99-variant-shared.cmake  libboost_math_c99-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_math_c99f-1.79.0/: boost_math_c99f-config.cmake  libboost_math_c99f-variant-shared.cmake  libboost_math_c99f-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_math_c99l-1.79.0/: boost_math_c99l-config.cmake  libboost_math_c99l-variant-shared.cmake  libboost_math_c99l-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_math_tr1-1.79.0/: boost_math_tr1-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_math_tr1f-1.79.0/: boost_math_tr1f-config.cmake  libboost_math_tr1f-variant-shared.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_math_tr1l-1.79.0/: boost_math_tr1l-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_mpi-1.79.0/: boost_mpi-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_nowide-1.79.0/: boost_nowide-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_prg_exec_monitor-1.79.0/: boost_prg_exec_monitor-config.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_program_options-1.79.0/: boost_program_options-config.cmake  libboost_program_options-variant-shared.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_random-1.79.0/: boost_random-config.cmake  libboost_random-variant-static.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_regex-1.79.0/: boost_regex-config.cmake  libboost_regex-variant-shared.cmake
app/prebuilt/ndk_25_boost_1.79.0/libs/arm64-v8a/cmake/boost_serialization-1.79.0/: boost_serialization-config.cmake  libboost_serialization-variant-shared.cmake  (+1 more)
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cards.h  deck.cpp  deck.h  native-lib.cpp  read.cpp  read.h  sim.h  tyrant.cpp  tyrant_optimize.cpp  xml.cpp
app/src/main/res/layout/: activity_history.xml  activity_in.xml  activity_main.xml  activity_out.xml  item_history.xml
app/src/main/res/menu/: menu_history.xml  menu_in.xml  menu_main.xml
app/src/main/res/values/: arrays.xml  ic_launcher_background.xml  strings.xml
app/src/main/res/xml/: pref_general.xml  pref_headers.xml  pref_notification.xml  pref_output_history.xml  root_preferences.xml
mTUO/app/: CMakeLists.txt  build.gradle
mTUO/app/src/main/: AndroidManifest.xml
mTUO/app/src/main/cpp/: card.h  cards.cpp  sim.cpp  tyrant.h  tyrant_optimize.cpp  xml.h
mTUO/app/src/main/res/layout/: activity_main.xml
mTUO/app/src/main/res/menu/: menu_main.xml
test_boost/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
test_boost/app/src/main/: AndroidManifest.xml
test_boost/app/src/main/cpp/: native-lib.cpp
test_boost/app/src/main/jni/: native_tst.cpp
test_boost/app/src/main/res/layout/: activity_main.xml  content_main.xml
test_boost/app/src/main/res/menu/: menu_main.xml
test_boost/app/src/main/res/values/: strings.xml
(+328 files in other folders)
